Restructure Gossip into P2P and API packages